добавлены индикаторы price, p / s
